initial site files

--- a/index.html
+++ b/index.html
@@ -11,30 +11,42 @@
 
 </head>
 
-<body>
+<header>
     
-    <h1>Maria Cabral</h1>
+    <h1 id="name">Maria Cabral</h1>
 
-    <p>about</p>
+    <p class="info">about</p>
 
-    <p>portfolio</p>
+    <p class="info">portfolio</p>
 
-    <p>contacts</p>
+    <p class="info">contacts</p>
 
-    <br>
+</header>
 
-    <img src="https://cdn.tutsplus.com/net/uploads/legacy/958_placeholders/placehold.gif" alt="placeholder">
+<body>
 
-    <p>My name is Maria Cabral. I was born in July of 1997. Also, I was born in Rio De Janiero in Brazil.</p>
+    <body background="assets/images/leaves.png"
 
-    <p>My hobbies include</p>
+    <img src="assets/images/placeholder.png" alt="placeholder">
 
-    <ul>
+    <h2 id="about">About Me</h2>
+
+    <p class="info">My name is Maria Cabral. I was born in July of 1997. Also, I was born in Rio De Janiero in Brazil.</p>
+
+    <p class="info">My hobbies include</p>
+
+    <ul class="info">
         <li>Gaming</li>
         <li>Writing</li>
         <li>Having fun</li>
     </ul>
 
 </body>
+
+<footer>
+
+    <p class="info">copyright</p>
+
+</footer>
 
 </html>
