--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
     
     <img id="placeholder" src="assets/images/placeholder.png" alt="placeholder">
 
-    <p class="info">My name is Maria Cabral. I was born in July of 1997. Also, I was born in Rio De Janiero in Brazil. My hobbies include playing video games, writing stories, and having fun. I don't know what to say. I'm just trying to get ride of empty space that seems to be an annoyance to me so don't mind the rest of this. In fact I shall tell you a short story. Once upon a time, there was a little girl. She was so sweet and everyone in the town loved her. But one day an old man came and gave her a gem. This gem was twisted and made her into an evil queen. Many years later anopther child of pure heart came and banished the evil queen into the dreaming realm. This was one of the pure childs realm, the one in his mind. The child then grew up to be the king. Until one day he found the gem of the evil queen. He then went into town and found a little girl of pure heart. Giving her the gem, and repeating the process all over again.</p>   </div>
+    <p class="info">My name is Maria Cabral. I was born in July of 1997. Also, I was born in Rio De Janiero in Brazil. My hobbies include playing video games, writing stories, and having fun. I don't know what to say. I'm just trying to get rid of empty space that seems to be an annoyance to me so don't mind the rest of this. In fact I shall tell you a short story. Once upon a time, there was a little girl. She was so sweet and everyone in the town loved her. But one day an old man came and gave her a gem. This gem was twisted and made her into an evil queen. Many years later another child of pure heart came and banished the evil queen into the dreaming realm. This was one of the pure childs realm, the one in his mind. The child then grew up to be the king. Until one day he found the gem of the evil queen. He then went into town and found a little girl of pure heart. Giving her the gem, thinking tht she will be able to tame it's power, bit in turn repeating the process all over again.</p>
     </div>
 </body>
 
 <footer>
 
-    <p class="info"></p>
+    <div id="footer">Copyright</div>
 
 </footer>
 
